deploy/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: pertisk
spec:
  controller: pertisk.tech/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  ingressClassName: pertisk
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app
                port:
                  number: 80
